src/test/ui/const-generics/issues/issue-62878.full.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/issue-62878.rs:6:38
   |
LL | fn foo<const N: usize, const A: [u8; N]>() {}
   |                                      ^ the type must not depend on the parameter `N`

error[E0747]: type provided when a constant was expected
  --> $DIR/issue-62878.rs:11:11
   |
LL |     foo::<_, {[1]}>();
   |           ^

error[E0308]: mismatched types
  --> $DIR/issue-62878.rs:11:15
   |
LL |     foo::<_, {[1]}>();
   |               ^^^ expected `usize`, found array `[{integer}; 1]`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0747, E0770.
For more information about an error, try `rustc --explain E0308`.
